# Bachelorarbeit

./: CMakeLists.txt  compile  run
Funktionsdatei/: Bachelorarbeit.cpp
Headerdatei/: Bachelorarbeit.hpp  matplotlibcpp.h
data/: Energy_L10.txt  Energy_L10_nearTc.txt  Energy_L20.txt  Energy_L20_nearTc.txt  Energy_L30.txt  Energy_L30_nearTc.txt  Energy_L40.txt  Energy_L40_nearTc.txt  Energy_L5.txt  Energy_L50.txt  Energy_L50_nearTc.txt  Energy_L60.txt  Energy_L60_nearTc.txt  Energy_nearTc_L10.txt  Energy_nearTc_L100.txt  Energy_nearTc_L20.txt  Energy_nearTc_L30.txt  Energy_nearTc_L40.txt  Energy_nearTc_L50.txt  Energy_nearTc_L60.txt  Spin_L10.txt  Spin_L10_nearTc.txt  Spin_L20.txt  Spin_L20_nearTc.txt  Spin_L30.txt  Spin_L30_nearTc.txt  Spin_L40.txt  Spin_L40_nearTc.txt  Spin_L50.txt  Spin_L50_nearTc.txt  Spin_L5_nearTc.txt  Spin_L60.txt  Spin_L60_nearTc.txt  Spin_nearTc_L10.txt  Spin_nearTc_L100.txt  Spin_nearTc_L20.txt  Spin_nearTc_L30.txt  Spin_nearTc_L40.txt  Spin_nearTc_L50.txt  Spin_nearTc_L60.txt  (+8 more)
main/: Bachelorarbeit.cpp  Plotting.ipynb  analysis.ipynb  auto_corr_Binder.ipynb  help_function.py  randnum.txt
